# pair-programming-llm

./: .env.sample  README.md  pyproject.toml
notebooks/google palm/: L1-palm.ipynb  L2-template.ipynb  L3-pair_program.ipynb  L4-technical_debt.ipynb  README-ru.md  README.md  utils.py
notebooks/langchain open ai/: L2_L3_template.ipynb
